fix(ld-sidenav): cosmetics for collapsed sidenav-back active indicator

--- a/src/liquid/components/ld-sidenav/ld-sidenav-back/ld-sidenav-back.shadow.css
+++ b/src/liquid/components/ld-sidenav/ld-sidenav-back/ld-sidenav-back.shadow.css
@@ -138,7 +138,7 @@ That's why we set z-index 0 on the following elements.
   );
 
   .ld-sidenav-back--collapsed & {
-    transform: translateX(calc(-1 * var(--ld-sidenav-translate-x-delta)));
+    transform: translateX(calc(-1 * var(--ld-sidenav-translate-x-delta) - 1px));
   }
 }
 
